[gd_scene load_steps=39 format=3 uid="uid://dc5tv8xgy64xx"]

[ext_resource type="Script" uid="uid://djxnw7r0ytnjf" path="res://Scripts/slime.gd" id="1_4gyqm"]
[ext_resource type="Shader" uid="uid://ccdm47sp20q61" path="res://enemy.gdshader" id="2_qi2p4"]
[ext_resource type="Texture2D" uid="uid://by1jyvtfgq6na" path="res://Art/Enemys/Slime/Slime_Spiked_Death.png" id="3_f4si1"]
[ext_resource type="Texture2D" uid="uid://duwo2vokoma47" path="res://Art/Enemys/Slime/Slime_Spiked_Ability.png" id="3_vblni"]
[ext_resource type="Texture2D" uid="uid://b10g7gwneio2r" path="res://Art/Enemys/Slime/Slime_Spiked_Run.png" id="4_f4si1"]
[ext_resource type="Texture2D" uid="uid://pqdi70lhr1hf" path="res://Art/Enemys/Slime/Slime_Spiked_Hit.png" id="4_paq7w"]
[ext_resource type="Texture2D" uid="uid://oo8ew6346aiy" path="res://Art/Enemys/Slime/Slime_Spiked_Ability_FX.png" id="7_e388w"]
[ext_resource type="Texture2D" uid="uid://bjd6e8oje5h4d" path="res://Art/Enemys/Slime/Slime_Spiked_Idle.png" id="7_r4o34"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4gyqm"]
radius = 8.0
height = 16.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4gyqm"]
shader = ExtResource("2_qi2p4")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/amount = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_2bbhk"]
atlas = ExtResource("3_vblni")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6mpm"]
atlas = ExtResource("3_vblni")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8ucs"]
atlas = ExtResource("3_vblni")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fk1yg"]
atlas = ExtResource("3_vblni")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4o34"]
atlas = ExtResource("3_f4si1")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y26kt"]
atlas = ExtResource("3_f4si1")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7ij5"]
atlas = ExtResource("3_f4si1")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_psnrq"]
atlas = ExtResource("3_f4si1")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kh8cv"]
atlas = ExtResource("3_f4si1")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_555id"]
atlas = ExtResource("3_f4si1")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4si1"]
atlas = ExtResource("4_paq7w")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gljc"]
atlas = ExtResource("4_paq7w")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vblni"]
atlas = ExtResource("4_paq7w")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e388w"]
atlas = ExtResource("4_paq7w")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vmhrb"]
atlas = ExtResource("7_r4o34")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqtr1"]
atlas = ExtResource("7_r4o34")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5ros"]
atlas = ExtResource("7_r4o34")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c37lc"]
atlas = ExtResource("7_r4o34")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xq7bh"]
atlas = ExtResource("4_f4si1")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_10642"]
atlas = ExtResource("4_f4si1")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uu7bc"]
atlas = ExtResource("4_f4si1")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqvs5"]
atlas = ExtResource("4_f4si1")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_3yqyl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2bbhk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6mpm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8ucs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fk1yg")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4o34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y26kt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7ij5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_psnrq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kh8cv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_555id")
}],
"loop": false,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4si1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gljc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vblni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e388w")
}],
"loop": false,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vmhrb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqtr1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5ros")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c37lc")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xq7bh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10642")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uu7bc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqvs5")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f4si1"]
size = Vector2(28, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3myv"]
atlas = ExtResource("7_e388w")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_px1jo"]
atlas = ExtResource("7_e388w")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfmve"]
atlas = ExtResource("7_e388w")
region = Rect2(0, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_vmhrb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3myv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_px1jo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfmve")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"effect",
"speed": 5.0
}]

[node name="Slime" type="Area2D" groups=["Enemy"]]
collision_layer = 4
collision_mask = 4
script = ExtResource("1_4gyqm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
shape = SubResource("CapsuleShape2D_4gyqm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_4gyqm")
position = Vector2(1, -10)
sprite_frames = SubResource("SpriteFrames_3yqyl")
animation = &"move"

[node name="WallRay" type="RayCast2D" parent="."]
target_position = Vector2(-15, 0)

[node name="FloorRay" type="RayCast2D" parent="."]
position = Vector2(-10, 0)
target_position = Vector2(0, 20)

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_f4si1")

[node name="EffectAnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_4gyqm")
position = Vector2(1, -10)
sprite_frames = SubResource("SpriteFrames_vmhrb")

[node name="AttackHitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackHitbox"]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_f4si1")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="animation_finished" from="EffectAnimatedSprite2D" to="." method="_on_effect_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="AttackHitbox" to="." method="_on_attack_hitbox_body_entered"]
[connection signal="body_exited" from="AttackHitbox" to="." method="_on_attack_hitbox_body_exited"]
